--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,3 +17,16 @@ body {
   overflow-x: hidden;
   font-family: 'Roboto', sans-serif;
 }
+
+/* @media only screen and (max-width: 500px) {
+  html {
+    font-size: 13px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  html {
+    font-size: 14px;
+  }
+} */
+
